# goit_python_web_fastapi_lect_01

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-db.yml  docker-compose.yml  dot.env-example  env-example.md  pyproject.toml  requirements.txt  run.sh
doc/: dot.env-exmaple
doc/dot-env-example/: env-dev  env-prod
goit_python_web_fastapi_lect_01/: alembic.ini  db.py  main.py  models.py  shemas.py  sql_app.db
goit_python_web_fastapi_lect_01/migrations/: env.py
goit_python_web_fastapi_lect_01/migrations/versions/: 3e28f5928509_add_roles.py  601dad705efc_confirmed.py  8e34dfed1fac_init.py  b24e3252a681_useravatar.py  d0b825141d11_init.py  d0b825141d11_users.py  d5da323ca536_init.py  e0e04f78f8a5_refresh.py
goit_python_web_fastapi_lect_01/src/: shemas.py
goit_python_web_fastapi_lect_01/src/auth/: auth-simple.py  auth.py  authOauth2.py  authOauth2Refresh.py  authSimple.py  auth_hash.py  auth_oauth2.py  auth_oauth2refresh.py  auth_simple.py  hash.py  test-jwt.py
goit_python_web_fastapi_lect_01/src/conf/: auth.py  config-.ini  config.ini.sample  config.py
goit_python_web_fastapi_lect_01/src/database/: db.py  models.py
goit_python_web_fastapi_lect_01/src/repository/: auth.py  authLib.py  authSimple.py  auth_oauth2.py  auth_oauth2refresh.py  auth_simple.py  cats.py  owners.py  users.py
goit_python_web_fastapi_lect_01/templates/: index.html  index.html1
scripts/: docker_run_db.cmd  docker_run_db_compose.cmd  runserver.cmd  sql_alebic_init.cmd  sql_upgrade.cmd
tests/: test-emails.py  test_hash.py
tests/templates/: cats_email.html
(+26 files in other folders)
